   select the best visual from your X server.  This reduces the chance of
   running out of colors.
 
 - ClearCase version-extended pathnames.

 - Replacement across multiple windows.


Bug Fixes in 5.2

 - Fix a crash when entering an invalid line number in "Goto Line".
 
 - Ignore the Caps-Lock key when invoking accelerators.

  
New Features in 5.1

 - Significant extensions to the regular expression syntax.  See details
   below.

 - Incremental search, and optional search bar.

 - New ctags code with full support for Exuberant Ctags, better
   handling of tag collisions, multiple tag file support, on-demand
   loading of tag files, and automatic reload of modified tag files.

 - Optional display of line numbers along the left side of the text.

 - NEdit can now read and write MS DOS format files.

 - New built-in syntax highlighting patterns for Lex, PostScript, SQL,
   Many syntax highlighting pattern improvements.

 - Improved international character set input

 - New macro subroutines: list_dialog, getenv, set_language_mode.

 - Optional warnings about external modifications to files

 - Clearcase awareness

 - Session manager restart capability

 - Default language mode "*" for user-defined menu items, allows
   per-language variations on a common base

 - Allow additional modifiers like Sun diamond key in user defined
   accelerators

 - Option to sort open previous menu.

 - -geometry and -iconic command line arguments act per-window, and
   can be specified via nc

 - -geometry now specified in characters, rather than pixels

 - -lm (language mode) command line option

 - Save As dialog defaults to same file name

 - Better default fonts for Linux systems

 - .nedit file version mechanism to make future upgrades easier


Bug Fixes in 5.1

 - Crash on large amounts of data fed to shell command which does not
   take input

 - Delayed secondary windows when executable statements specified in
   users .neditmacro file

 - Many corrections to online help
